Fix board loading everlay layout issues.

--- a/app/styles/partials/_workspace.scss
+++ b/app/styles/partials/_workspace.scss
@@ -4,13 +4,14 @@
 	width: 100%;
 }
 
-.loading-overlay {
+#loading-overlay {
 	position: fixed;
 	display: none;
 	z-index: 500;
 	left: 0;
 	top: 0;
-	height: 100%;
+	min-width: 100%;
+	min-height: 100%;
 	background-color: $black-transparent-60;
 
 	&.visible {
